# quantity

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_bot.py
docs/: QUICKSTART.md  architecture.md  design.md
qtf/: __init__.py  config.py
qtf/ai/: __init__.py  generator.py  prompts.py
qtf/api/: __init__.py  server.py
qtf/core/: __init__.py  events.py  exceptions.py
qtf/data/: __init__.py  base.py  models.py  simulated.py
qtf/engine/: __init__.py  backtest.py  base.py  context.py  event_loop.py
qtf/execution/: __init__.py  base.py  models.py
qtf/storage/: __init__.py  database.py  repository.py
specs/: README.md
specs/api/: README.md
specs/guidelines/: implementation_guide.md  review_checklist.md
specs/models/: order.md  quote.md
specs/strategies/: README.md
specs/templates/: design_doc.md
tests/: __init__.py  test_core.py
